# ai-director

./: .gitignore
director-service/: .env.example  .gitignore  README.md  pyproject.toml
director-service/app/: api.py  config.py  main.py
director-service/app/models/: __init__.py  enums.py  (+11 more)
director-service/frontend/: package-lock.json  package.json
director-service/prompts/: system_prompt.txt  temporal_beat_pass_template.txt  temporal_camera_dsl_catalog.txt  temporal_critique_pass_template.txt  temporal_film_language_glossary.txt  temporal_shot_pass_dsl_template.txt  temporal_shot_pass_template.txt  temporal_style_intent_template.txt  temporal_system_prompt.txt  temporal_system_prompt_dsl.txt  user_prompt_template.txt
director-service/scenes/: apartment_living_room.json  corridor_scene.json  office_room.json  temporal_occlusion_test.json  temporal_slot_car_compact_track.json  temporal_two_actors.json  temporal_walking_actor.json
director-service/schemas/: cinematic_scene.schema.json  directing_plan.schema.json  scene_summary.schema.json  trajectory_plan.schema.json
director-service/tests/: conftest.py  test_api.py  test_directing_plan_generator.py  test_openai_live.py  test_pipeline.py  test_plan_validator.py  test_prompt_builder.py  test_scene_abstraction.py  test_scene_timeline_models.py  test_temporal_abstraction.py  test_temporal_api.py  test_temporal_event_interpreter.py  test_temporal_orchestrator.py  test_temporal_pipeline.py  test_temporal_prompt_builder.py  test_temporal_trajectory_solver.py  test_temporal_validator.py  test_trajectory_solver.py
(+145 files in other folders)
